[package]
name = "quickscrape-tgbot"
description = "Get some infos from a pasted link"
version = "0.1.0"
repository = "https://github.com/EdJoPaTo/quickscrape-tgbot"
authors = ["EdJoPaTo <quickscrape-tgbot-rust@edjopato.de>"]
edition = "2024"

[lints.rust]
unsafe_code = "forbid"
unused_qualifications = "warn"
[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
allow_attributes = "warn"
min_ident_chars = "warn"
unused_trait_names = "warn"

[profile.release]
# See https://doc.rust-lang.org/cargo/reference/profiles.html
codegen-units = 1
lto = true

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false }
frankenstein = { version = "0.45", features = ["client-ureq"] }
lazy-regex = "3"
scraper = "0.24"
serde_json = "1"
tempfile = "3"
ureq = "3"
